Add a word (v1.0-pre3)

--- a/src/main.tex
+++ b/src/main.tex
@@ -598,7 +598,7 @@ $\rightarrow$ \small\emph{more detailed results in the paper}
 	\vspace{1ex}
 
 	\begin{itemize}
-		\item Consider the use case when designing mitigations.
+		\item Consider the use case when designing or choosing mitigations.
 		\item Expect the unexpected: the behavior of poisoning attacks is unpredictable.
 		\item Try it yourself! Our work is \emph{reproducible} and everything is in \emph{open-access}!
 	\end{itemize}\vspace{2ex}
